--- a/reviews.html
+++ b/reviews.html
@@ -2,7 +2,7 @@
 layout: page
 title: Paper Reviews
 linktitle: Paper Reviews
-permalink: /en/reviews/
+permalink: /reviews/
 ---
 <div class="posts">
     {% for post in site.posts %}
